feat: add controlled task center
